# Myth-Mod-Manager

./: .gitignore  CONTRIBUTING.md  Dockerfile  FUNDING.yml  LICENSE  README.md  createEXE.bat  main.spec  pyproject.toml  pytest.ini  requirements.txt  start_MMM.bat  start_MMM.sh
.github/workflows/: release.yml  release_linux.yml
src/: JSONParser.py  __main__.py  constant_vars.py  errorChecking.py  fileMover.py  getPath.py  main.py  main_window.py  manager.py  profileManager.py  profiles.py  runGame.bat  save.py  settings.py  style.py  tools.py  toolsData.py  update.py
src/api/: api.py  checkModUpdate.py  checkUpdate.py  update.py
src/lang/: de_DE.qm  en_US.qm  es_ES.qm  fr_FR.qm  it_IT.qm  ja_JP.qm  ko_KR.qm  nl_NL.qm  pl_PL.qm  pt_BR.qm  ru_RU.qm  zh_CN.qm
src/threaded/: QThread.py  backupMods.py  changeModType.py  deleteMod.py  file_mover.py  moveToDisabledDir.py  moveToEnabledDir.py  unZipMod.py  update.py  workerQObject.py
src/widgets/: aboutQWidget.py  announcementQDialog.py  contextMenu.py  deleteWarningQDialog.py  gamepathQDialog.py  ignoredModsQListWidget.py  insertStringQDialog.py  listWidget.py  managerQTableWidget.py  modInfoQWidget.py  modProfileQTreeWidget.py  modSelectionQDialog.py  newModQDialog.py  newUpdateQDialog.py  profileSelectionQDialog.py  progressWidget.py  tableWidget.py  tagDisplayQTable.py  (+4 more)
tests/: conftest.py
translations/: de_DE.ts  en_US.ts  es_ES.ts  fr_FR.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  ru_RU.ts  zh_CN.ts
utils/: scrape_translations_needed.py  update_qm_files.py  update_ts_files.py
(+59 files in other folders)
