[tool.poetry]
name = "src"
version = "1.3.0"
description = "A PAYDAY 2 Mod Manager"
authors = ["Wolfmyths"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "6.6.0"
patool = "1.12"
semantic-version = "2.10.0"
Pyinstaller = "6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
